--- a/ch07-04-bringing-paths-into-scope-with-the-use-keyword.html
+++ b/ch07-04-bringing-paths-into-scope-with-the-use-keyword.html
@@ -336,7 +336,7 @@ fn main() {
 </span><span class="boring">
 </span><span class="boring">    io::stdin()
 </span><span class="boring">        .read_line(&amp;mut guess)
-</span><span class="boring">        .expect(&quot;讀取行數失敗&quot;);
+</span><span class="boring">        .expect(&quot;讀取該行失敗&quot;);
 </span><span class="boring">
 </span><span class="boring">    println!(&quot;你的猜測數字：{}&quot;, guess);
 </span>}
