--- a/ch19-04-advanced-types.html
+++ b/ch19-04-advanced-types.html
@@ -312,7 +312,7 @@ pub trait Write {
 </span><span class="boring">
 </span><span class="boring">        io::stdin()
 </span><span class="boring">            .read_line(&amp;mut guess)
-</span><span class="boring">            .expect(&quot;讀取行數失敗&quot;);
+</span><span class="boring">            .expect(&quot;讀取該行失敗&quot;);
 </span><span class="boring">
 </span>        let guess: u32 = match guess.trim().parse() {
             Ok(num) =&gt; num,
