--- a/ch01-02-hello-world.html
+++ b/ch01-02-hello-world.html
@@ -170,7 +170,7 @@
                         <h2><a class="header" href="#hello-world" id="hello-world">Hello, World!</a></h2>
 <p>現在你已經安裝好 Rust，讓我們開始來寫你的第一支 Rust 程式吧。當我們學習一門新的語言時，有一個習慣是寫一支印出「Hello, world!」到螢幕上的小程式，此章節將教你做一樣的事！</p>
 <blockquote>
-<p>注意：本書將預設你已經知道命令列最基本的使用方法。Rust 對於你的編輯器、工具以及程式碼位於何處沒有特殊的要求，所以如果你更傾向於使用整合開發環境（IDE）的話，請儘管使用你最愛的 IDE。許多 IDE 都已經針對 Rust 提供某種程度的支援，請查看你所使用的 IDE 技術文件以瞭解詳情。最近，Rust 團隊正在積極專注在提升 IDE 的支援，而且進展十分迅速且出色！</p>
+<p>注意：本書將假設你已經知道命令列最基本的使用方法。Rust 對於你的編輯器、工具以及程式碼位於何處沒有特殊的要求，所以如果你更傾向於使用整合開發環境（IDE）的話，請儘管使用你最愛的 IDE。許多 IDE 都已經針對 Rust 提供某種程度的支援，請查看你所使用的 IDE 技術文件以瞭解詳情。最近，Rust 團隊正在積極專注在提升 IDE 的支援，而且進展十分迅速出色！</p>
 </blockquote>
 <h3><a class="header" href="#建立專案目錄" id="建立專案目錄">建立專案目錄</a></h3>
 <p>你將先建立一個目錄來儲存你的 Rust 程式碼。程式碼位於何處並不重要，但為了能好好練習書中的範例和專案，我們建議你可以在你的 home 目錄建立一個 <em>projects</em> 目錄然後將你所有的專案保存在此。</p>
@@ -188,7 +188,7 @@ $ cd hello_world
 &gt; cd hello_world
 </code></pre>
 <h3><a class="header" href="#編寫並執行-rust-程式" id="編寫並執行-rust-程式">編寫並執行 Rust 程式</a></h3>
-<p>接著，請產生一個原始檔案並叫做 <em>main.rs</em>。Rust 的文件檔案都會以 <em>.rs</em> 副檔名稱作為結尾。如果你用到不止一個單字的話，請用底線區隔開來。比方說，請使用 <em>hello_world.rs</em> 而不是 <em>helloworld.rs</em>。</p>
+<p>接著，請產生一個全新原始碼檔案並命名為 <em>main.rs</em>。Rust 的文件檔案都會以 <em>.rs</em> 副檔名稱作為結尾。如果你用到不只一個單字的話，請用底線區隔開來。比方說，請使用 <em>hello_world.rs</em> 而不是 <em>helloworld.rs</em>。</p>
 <p>現在請開啟 <em>main.rs</em> 檔案然而後輸入範例 1-1 中的程式碼。</p>
 <p><span class="filename">檔案名稱：main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
@@ -226,7 +226,7 @@ Hello, world!
 </span></code></pre></pre>
 <p>此行負責了整支程式要做的事：它將文字顯示在螢幕上。這邊有四個細節要注意。</p>
 <p>首先，Rust 的排版風格是 4 個空格而非一個 tab。</p>
-<p>第二，<code>println!</code> 會呼叫一支 Rust 巨集（macro）。如果是呼叫函式的話，那則會是 <code>println</code>（去掉 <code>!</code>）。我們會在第 19 章討論更多巨集的細節。現在你只需要知道使用 <code>!</code> 代表呼叫一支巨集而非一個正常的函式。</p>
+<p>第二，<code>println!</code> 會呼叫一支 Rust 巨集（macro）。如果是呼叫函式的話，那則會是 <code>println</code>（去掉 <code>!</code>）。我們會在第十九章討論更多巨集的細節。現在你只需要知道使用 <code>!</code> 代表呼叫一支巨集而非一個正常的函式。</p>
 <p>第三，<code>&quot;Hello, world!&quot;</code> 是一個字串，我們將此字串作為引數傳遞給 <code>println!</code>，然後該字串就會被顯示到螢幕上。</p>
 <p>第四，我們用分號（<code>;</code>）作為該行結尾，代表此表達式的結束和下一個表達式的開始。多數的 Rust 程式碼都以分號做結尾。</p>
 <h3><a class="header" href="#編譯和執行是不同的步驟" id="編譯和執行是不同的步驟">編譯和執行是不同的步驟</a></h3>
@@ -240,12 +240,12 @@ Hello, world!
 main  main.rs
 </code></pre>
 <p>在 Windows 上的 CMD，你需要輸入：</p>
-<pre><code class="language-cmd">&gt; dir /B %= the /B option says to only show the file names =%
+<pre><code class="language-cmd">&gt; dir /B %= /B 選項代表只顯示檔案名稱 =%
 main.exe
 main.pdb
 main.rs
 </code></pre>
-<p>這顯示了副檔名為 <em>.rs</em>  的原始碼檔案、執行檔（在 Winddows 上為 <em>main.exe</em>；其他則為 <em>main</em>），然後在 Windows 上會再出現一個副檔名為 <em>.pdb</em> 的除錯資訊文件。在這裡，你就可以像這樣執行 <em>main</em> 或 <em>main.exe</em> 檔案：</p>
+<p>這顯示了副檔名為 <em>.rs</em>  的原始碼檔案、執行檔（在 Windows 上為 <em>main.exe</em>；其他則為 <em>main</em>），然後在 Windows 上會再出現一個副檔名為 <em>.pdb</em> 的除錯資訊文件。在這裡，你就可以像這樣執行 <em>main</em> 或 <em>main.exe</em> 檔案：</p>
 <pre><code class="language-console">$ ./main # 在 Windows 上則是 .\main.exe
 </code></pre>
 <p>如果 <em>main.rs</em> 正是你的「Hello, world!」程式，這命令就會顯示 <code>Hello, world!</code> 到你的終端機。</p>
