--- a/foreword.html
+++ b/foreword.html
@@ -168,10 +168,10 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#前言" id="前言">前言</a></h1>
-<p>雖然不是那麼明確，但 Rust 程式設計語言旨在<em>賦予能力（empowerment）</em>：無論你現在寫的是何種程式碼，Rust 能賦予你更多能力，在廣泛的各種領域中走的更遠且更有自信。</p>
-<p>比方說，「系統層級」的工作會需要處理低階的記憶體管理、資料呈現與並行細節。傳統以往來說，這是片神祕的程式設計領域，只有那些投入好幾年時間學習的人才有辦法駕馭，並懂得避開其惡名昭彰的陷阱。而且就算是十分謹慎的實作者，也生怕他們的程式碼會出現漏洞、崩潰或損壞。</p>
-<p>Rust 破除了這些障礙，消除了以往的陷阱並提供友善全面的工具來協助你。想要「深入」底層控制的程式設計師可以使用 Rust，無需冒著常見的崩潰或安全漏洞風險，也無需學習得經常改變的工具鏈其中的細節。更好地是，語言本身就是設計成能引導你自然而然地寫出可靠且在速度與記憶體使用都十分高效的程式碼。</p>
-<p>已經在處理底層程式碼的程式設計師可以使用 Rust 來擴展他們的野心。舉例來說，在 Rust 中進行平行化是相對低風險的動作，編譯器會幫你抓到典型的錯誤。而且你也能更有自信且更積極地進行優化，不必擔心會意外造成崩潰或漏洞。</p>
+<p>雖然不是那麼明確，但 Rust 程式設計語言旨在<em>賦權（empowerment）</em>：無論你現在寫的是何種程式碼，Rust 都能賦予你更多能力，在更廣泛的領域中帶有自信地向前邁進。</p>
+<p>比方說，「系統層級」的工作會需要處理低階的記憶體管理、資料呈現與程序並行的細節。對以往來說，這塊程式領域被視為巫術般的存在，只有投入好幾年時間學習的選中之人才有辦法駕馭，也才能懂得如何避開其惡名昭彰的陷阱。而且就算是這個領域的實作者也謹慎行事，也生怕他們的程式碼會出現漏洞、當機或損壞。</p>
+<p>Rust 破除了這些障礙，消除了以往的陷阱並提供友善全面的工具來協助你。想要「深入」底層控制的程式設計師可以使用 Rust，無需冒著常見的當機或安全漏洞風險，也無需學習得經常改變的工具鏈其中的細節。更好地是，這個語言本身就是設計成能引導你自然而然地寫出可靠且在速度與記憶體使用都十分高效的程式碼。</p>
+<p>已經在處理底層程式碼的程式設計師可以使用 Rust 來擴展他們的野心。舉例來說，在 Rust 中進行平行化是相對低風險的動作，編譯器會幫你抓到典型的錯誤。而且你也能更有自信且更積極地進行最佳化，不必擔心會意外造成當機或漏洞。</p>
 <p>但 Rust 並不只限於底層的系統程式設計。其表現力與易用易讀的程度能令人愉快地寫出 CLI 應用程式、網頁伺服器與許多其他種程式碼。你會在本書中看到這兩種簡單的範例。使用 Rust 能這讓你將一個領域所學到的技能延伸到另一個領域，你可以透過寫網頁應用程式來學習 Rust，然後應用同樣的技能到你的樹莓派（Raspberry Pi）上。</p>
 <p>本書充分體現了 Rust 賦予其使用者更多能力的潛力。其內容平易近人，不止致力於協助你提升 Rust 的知識，還能提升讓你身為程式設計師的整體信心。所以讓我們準備開始學習吧，歡迎加入 Rust 的社群！</p>
 <p>— Nicholas Matsakis 與 Aaron Turon</p>
