--- a/ch04-00-understanding-ownership.html
+++ b/ch04-00-understanding-ownership.html
@@ -168,7 +168,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#理解所有權" id="理解所有權">理解所有權</a></h1>
-<p>所有權可以說是 Rust 最與衆不同的特色，這讓 Rust 不需要垃圾回收（garbage collector）就可以保障記憶體安全。因此理解 Rust 中的所有權如何運作是非常重要的。在本章節，我們將討論所有權以及一些相關的功能：借用、切片與 Rust 如何在記憶體分配資料。</p>
+<p>所有權可以說是 Rust 最與眾不同的特色，這讓 Rust 不需要垃圾回收（garbage collector）就可以保障記憶體安全。因此理解 Rust 中的所有權如何運作是非常重要的。在本章節，我們將討論所有權以及一些相關的功能：借用、切片與 Rust 如何在記憶體分配資料。</p>
 <blockquote>
 <ul>
 <li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
