--- a/ch03-00-common-programming-concepts.html
+++ b/ch03-00-common-programming-concepts.html
@@ -169,7 +169,7 @@
                     <main>
                         <h1><a class="header" href="#常見程式設計概念" id="常見程式設計概念">常見程式設計概念</a></h1>
 <p>此章節涵蓋了幾乎所有程式語言都會出現的概念，以及如何在 Rust 使用。許多程式語言的核心概念都是相同的，所以此章節所介紹的概念也不是 Rust 所特有的。不過我們會用 Rust 的程式碼來討論它們，並解釋使用這些概念的慣例。</p>
-<p>更明確來說，你將會學習到變數、基本型別、註釋以及控制流程。這些基本概念會出現在每個 Rust 程式中，所以提早學習這些概念可以為你打下穩健的基礎。</p>
+<p>更明確來說，你將會學習到變數、基本型別、註解以及控制流程。這些基本概念會出現在每個 Rust 程式中，所以提早學習這些概念可以為你打下穩健的基礎。</p>
 <blockquote>
 <h4><a class="header" href="#關鍵字keywords" id="關鍵字keywords">關鍵字（Keywords）</a></h4>
 <p>Rust 程式語言和其他語言一樣會保留一系列的<em>關鍵字（keywords）</em>。請注意你將無法用這些字作為變數或函式名稱。大多數關鍵字都有特別意義，而你將會在你的 Rust 程式使用它們來處理不同的任務；而有一些目前則還沒有任何用途，但是在未來可能會被 Rust 加入所以作為保留。你可以在<a href="appendix-01-keywords.html">附錄 A</a> 查看關鍵字列表。</p>
