--- a/ch03-03-how-functions-work.html
+++ b/ch03-03-how-functions-work.html
@@ -169,7 +169,7 @@
                     <main>
                         <h2><a class="header" href="#函式" id="函式">函式</a></h2>
 <p>函式在 Rust 程式碼中無所不在。你已經見過一個語言最重要的函式了：<code>main</code> 函式是許多程式的入口點。此外你也看到了 <code>fn</code> 關鍵字能讓你宣告新的函式。</p>
-<p>Rust 程式碼使用 <em>snake case</em> 作為函式與變數名稱的慣例風格。在 snake case 中，所有的字母都是小寫，並用底線區隔單字。以下是一支包含函式定義範例的程式：</p>
+<p>Rust 程式碼使用 <em>snake case</em> 式作為函式與變數名稱的慣例風格。在 snake case 中，所有的字母都是小寫，並用底線區隔單字。以下是一支包含函式定義範例的程式：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     println!(&quot;Hello, world!&quot;);
@@ -193,7 +193,7 @@ Hello, world!
 </code></pre>
 <p>程式碼會按照 <code>main</code> 函式中的順序執行。首先，「Hello, world!」的訊息會先顯示出來，再來才會呼叫 <code>another_function</code> 並印出它的訊息。</p>
 <h3><a class="header" href="#函式參數" id="函式參數">函式參數</a></h3>
-<p>函式也可以被定義成擁有<em>參數（parameters）<em>的，這是函式簽名（signatures）中特殊的變數。當函式有參數時，你可以提供那些參數的確切數值。嚴格上來說，我們傳遞的數值會叫做</em>引數（arguments）</em>。但為了方便起見，通常大家不太會去在意兩者的區別。雖然函式定義時才叫<em>參數</em>，傳遞數值時叫做<em>引數</em>，但很多時候會被人們拿來交互使用。</p>
+<p>函式也可以被定義成擁有<em>參數（parameters）<em>的，這是函式簽名（signatures）中特殊的變數。當函式有參數時，你可以提供那些參數的確切數值。嚴格上來說，我們傳遞的數值會叫做</em>引數（arguments）</em>。但為了方便起見，通常大家不太會去在意兩者的區別。雖然函式定義時才叫<em>參數</em>，傳遞數值時叫做<em>引數</em>，但很多情況下都能被交換使用。</p>
 <p>以下是加上參數後重新寫過的 <code>another_function</code> 範例：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
@@ -212,7 +212,7 @@ fn another_function(x: i32) {
 x 的數值為：5
 </code></pre>
 <p>宣告 <code>another_function</code> 時有一個參數叫做 <code>x</code>，而 <code>x</code> 的型別被指定為 <code>i32</code>。當我們傳遞 <code>5</code> 給 <code>another_function</code> 時，<code>println!</code> 巨集會將 <code>5</code> 置於格式化字串中的大括號的位置。</p>
-<p>在函式簽名中，你<em>必須</em>宣告每個參數的型別，這是 Rust 謹慎考慮後的設計決定：在函式定義中要求型別詮釋，代表編譯器幾乎不需要你在其他地方再提供資訊才能知道你要做什麼。</p>
+<p>在函式簽名中，你<em>必須</em>宣告每個參數的型別，這是 Rust 刻意做下的設計決定：在函式定義中要求型別詮釋，代表編譯器幾乎不需要你在其他地方再提供資訊才能知道你要使用什麼型別。</p>
 <p>如果你希望函式擁有數個參數，你可以用逗號區隔開來，像這樣：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
@@ -263,7 +263,7 @@ error: expected expression, found statement (`let`)
   = note: variable declaration using `let` is a statement
 </code></pre>
 <p><code>let y = 6</code> 陳述式不回傳數值，所以 <code>x</code> 得不到任何數值。這就和其他語言有所不同，像是 C 或 Ruby，通常它們的賦值仍能回傳所得到的值。在那些語言，你可以寫 <code>x = y = 6</code> 同時讓 <code>x</code> 與 <code>y</code> 都取得 <code>6</code>，但在 Rust 就不行。</p>
-<p>表達式則會運算出些東西，並組合成你大部分所寫的 Rust 程式。先想想看一個簡單的數學運算比如 <code>5 + 6</code>，這就是個會算出 <code>11</code> 的表達式。表達式可以是陳述式的一部分：在範例 3-1 中 <code>let y = 6;</code> 的 <code>6</code> 其是就是個算出 <code>6</code> 的表達式。呼叫函式也可以是表達式、呼叫巨集也是表達式、我們用 <code>{}</code> 產生的作用域也是表達式。舉例來說：</p>
+<p>表達式則會運算出些東西，並組合成你大部分所寫的 Rust 程式。先想想看一個簡單的數學運算比如 <code>5 + 6</code>，這就是個會算出 <code>11</code> 的表達式。表達式可以是陳述式的一部分：在範例 3-1 中 <code>let y = 6;</code> 的 <code>6</code> 其實就是個算出 <code>6</code> 的表達式。呼叫函式也可以是表達式、呼叫巨集也是表達式、我們用 <code>{}</code> 產生的作用域也是表達式。舉例來說：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     let x = 5;
