--- a/ch03-04-comments.html
+++ b/ch03-04-comments.html
@@ -169,7 +169,7 @@
                     <main>
                         <h2><a class="header" href="#註解" id="註解">註解</a></h2>
 <p>所有程式設計師均致力於讓他們的程式碼易於閱讀，不過有時候額外的解釋還是需要的。這種情況下，開發者會在他們的程式碼留下一些筆記或是<em>註解（comments）</em>，編譯器會忽略這些字，但其他人在閱讀程式碼時可能就會覺得很有幫助。</p>
-<p>這是一個簡單地註釋：</p>
+<p>這是一個簡單地註解：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
