--- a/ch04-01-what-is-ownership.html
+++ b/ch04-01-what-is-ownership.html
@@ -174,25 +174,25 @@
 <p>當你理解所有權時，你就有一個穩健的基礎能夠理解那些使 Rust 獨特的功能。在本章節中，你將透過一些範例來學習所有權，我們會專注在一個非常常見的資料結構：字串。</p>
 <blockquote>
 <h3><a class="header" href="#堆疊stack與堆積heap" id="堆疊stack與堆積heap">堆疊（Stack）與堆積（Heap）</a></h3>
-<p>在許多程式語言，你通常不需要去想到堆疊與堆積。但在像是 Rust 這樣的系統程式語言，資料是位於堆疊還是堆積就會有差，這會影響語言的行為以及為何你得作出某些特定決策。在本章稍後討論所有權時，都會談到堆疊與堆積的關聯，所以這裡預先稍作解釋。</p>
-<p>堆疊與堆積都是提供程式碼在執行時能夠使用的記憶體部分，但他們組成的方式卻不一樣。堆疊會按照它取得數值的順序依序存放它們，並以相反的順序移除數值。這通常稱為<em>後進先出（last in, first out)</em>。你可以把堆疊想成是盤子，當你要加入更多盤子，你會將它們疊在最上面。如果你要取走盤子的話，你也是從最上方拿走。想要從底部或中間，插入或拿走盤子都是不可行的！當我們要新增資料時，我們會稱呼為<em>推入堆疊（pushing onto the stack）</em>，而移除資料則是叫做<em>彈出堆疊（popping off the stack）</em>。</p>
+<p>在許多程式語言中，你通常不需要去想到堆疊與堆積。但在像是 Rust 這樣的系統程式語言，資料是位於堆疊還是堆積就會有差，這會影響語言的行為也是你得作出某些特定決策的理由。在本章稍後討論所有權時，都會談到堆疊與堆積的關聯，所以這裡預先稍作解釋。</p>
+<p>堆疊與堆積都是提供程式碼在執行時能夠使用的記憶體部分，但他們組成的方式卻不一樣。堆疊會按照它取得數值的順序依序存放它們，並以相反的順序移除數值。這通常稱為<em>後進先出</em>（<em>last in, first out</em>）。你可以把堆疊想成是盤子，當你要加入更多盤子，你會將它們疊在最上面。如果你要取走盤子的話，你也是從最上方拿走。想要從底部或中間，插入或拿走盤子都是不可行的！當我們要新增資料時，我們會稱呼為<em>推入堆疊</em>（<em>pushing onto the stack</em>），而移除資料則是叫做<em>彈出堆疊</em>（<em>popping off the stack</em>）。</p>
 <p>所有在堆疊上的資料都必須是已知固定大小。在編譯時屬於未知或可能變更大小的資料必須儲存在堆積。堆積就比較沒有組織，當你要將資料放入堆積，你得要求一定大小的空間。記憶體分配器（memory allocator）會找到一塊夠大的空位，標記為已佔用，然後回傳一個<em>指標（pointer）</em>，指著該位置的位址。這樣的過程稱為<em>在堆積上分配（allocating on the heap）</em>，或者有時直接簡稱為<em>分配（allocating）</em> 就好。將數值放入堆疊不會被視為是在分配。因為指標是固定已知的大小，所以你可以存在堆疊上。但當你要存取實際資料時，你就得去透過指標取得資料。</p>
 <p>你可以想像成是一個餐廳。當你進入餐廳時，你會告訴服務員你的團體有多少人，他就會將你們帶到足夠人數的餐桌。如果你的團體有人晚到的話，他們可以直接尋問你坐在哪而找到你。</p>
 <p>將資料推入堆疊會比在堆積上分配還來的快，因為分配器不需要去搜尋哪邊才能存入新資料，其位置永遠在堆疊最上方。相對的，堆積就需要比較多步驟，分配器必須先找到一個夠大的空位來儲存資料，然後作下紀錄為下次分配做準備。</p>
 <p>在堆積上取得資料也比在堆疊上取得來得慢，因為你需要用追蹤指標才找的到。現代的處理器如果在記憶體間跳轉越少的話速度就越快。讓我們繼續用餐廳做比喻，想像伺服器就是在餐廳為數個餐桌點餐。最有效率的點餐方式就是依照餐桌順序輪流點餐。如果幫餐桌 A 點了餐之後跑到餐桌 B 點，又跑回到 A 然後又跑到 B 的話，可以想像這是個浪費時間的過程。同樣的道理，處理器在處理任務時，如果處理的資料相鄰很近（就如同存在堆疊）的話，當然比相鄰很遠（如同存在堆積）來得快。要在堆積分配大量的空間同樣也很花時間。</p>
 <p>當你的程式碼呼叫函式時，傳遞給函式的數值（可能包含指向堆積上資料的指標）與函式區域變數會被推入堆疊。當函式結束時，這些數值就會被彈出。</p>
-<p>追蹤哪部分的程式碼用到了堆積上的哪些資料、最小化堆積上的重複資料、以及清除堆積上沒再使用的資料確保你不會耗盡空間，這些問題都是所有權系統要處理的。一旦你理解所有權後，你通常就不再需要常常想到堆疊與堆積，不過能理解所有權就是為了管理堆積有助於解釋為何它要這樣運作。</p>
+<p>追蹤哪部分的程式碼用到了堆積上的哪些資料、最小化堆積上的重複資料、以及清除堆積上沒再使用的資料確保你不會耗盡空間，這些問題都是所有權系統要處理的。一旦你理解所有權後，你通常就不再需要經常考慮堆疊與堆積的問題，不過能理解所有權就是為了管理堆積有助於解釋為何它要這樣運作。</p>
 </blockquote>
 <h3><a class="header" href="#所有權規則" id="所有權規則">所有權規則</a></h3>
 <p>首先，讓我們先看看所有權規則。當我們在解釋說明時，請記得這些規則：</p>
 <ul>
-<li>Rust 中每個數值都會有一個變數作為它的<em>擁有者（owner）</em>。</li>
+<li>Rust 中每個數值都會有一個變數作為它的<em>擁有者</em>（<em>owner</em>）。</li>
 <li>同時間只能有一個擁有者。</li>
 <li>當擁有者離開作用域時，數值就會被丟棄。</li>
 </ul>
 <h3><a class="header" href="#變數作用域" id="變數作用域">變數作用域</a></h3>
 <p>我們已經在第二章示範了一支 Rust 的程式。現在既然我們已經知道了基本語法，我們接下來就不再將 <code>fn main() {</code> 寫進程式碼範例範例中。所以你在參考時，請記得親自寫在 <code>main</code> 函式內。這樣一來，我們的範例可以更加簡潔，讓我們更加專注在細節而非樣板程式。</p>
-<p>作為所有權的第一個範例，我們先來看變數的<em>作用域（scope）</em>。作用域是一些項目在程式內的有效範圍。假設我們有個像這樣的變數：</p>
+<p>作為所有權的第一個範例，我們先來看變數的<em>作用域</em>（<em>scope</em>）。作用域是一些項目在程式內的有效範圍。假設我們有個像這樣的變數：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -217,8 +217,8 @@
 <p>目前為止，變數何時有效與作用域的關係都還跟其他程式語言相似。現在我們要以此基礎來介紹 <code>String</code> 型別</p>
 <h3><a class="header" href="#string-型別" id="string-型別"><code>String</code> 型別</a></h3>
 <p>要能夠解釋所有權規則，我們需要使用比第三章的<a href="ch03-02-data-types.html#data-types">「資料型別」</a><!-- ignore -->介紹過的還複雜的型別才行。之前我們提到的型別都是儲存在堆疊上的，在作用域結束時就會從堆疊中彈出。但是我們想要觀察的是儲存在堆積上的資料，並研究 Rust 是如何知道要清理資料的。</p>
-<p>我們會使用 <code>String</code> 最為範例並專注在 <code>String</code> 與所有權有關的部分。這些部分也適用於其他基本函式庫或你自己定義的複雜資料型別。我們會在第八章更深入探討 <code>String</code>。</p>
-<p>我們已經看過字串字面值（string literals），字串的數值是寫死在我們的程式內的。字串字面值的確很方便，但它不可能完全適用於我們使用文字時的所有狀況。其中一個原因是因為它是不可變的，另一個原因是並非所有字串值在我們編寫程式時就會知道。舉裡來說，要是我們想要收集使用者的輸入並儲存它呢？對於這些情形，Rust 提供第二種字串型別 <code>String</code>。此型別是分配在堆積上的，所以可以儲存我們在編譯期間未知的一些文字。你可以從字串字面值使用 <code>from</code> 函式來建立一個 <code>String</code>，如以下所示：</p>
+<p>我們會使用 <code>String</code> 作為範例並專注在 <code>String</code> 與所有權有關的部分。這些部分也適用於其他基本函式庫或你自己定義的複雜資料型別。我們會在第八章更深入探討 <code>String</code>。</p>
+<p>我們已經看過字串字面值（string literals），字串的數值是寫死在我們的程式內的。字串字面值的確很方便，但它不可能完全適用於我們使用文字時的所有狀況。其中一個原因是因為它是不可變的，另一個原因是並非所有字串值在我們編寫程式時就會知道。舉例來說，要是我們想要收集使用者的輸入並儲存它呢？對於這些情形，Rust 提供第二種字串型別 <code>String</code>。此型別是分配在堆積上的，所以可以儲存我們在編譯期間未知的一些文字。你可以從字串字面值使用 <code>from</code> 函式來建立一個 <code>String</code>，如以下所示：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -244,7 +244,7 @@
 <li>我們不再需要這個 <code>String</code> 時，我們需要以某種方法將此記憶體還給分配器。</li>
 </ul>
 <p>當我們呼叫 <code>String::from</code> 時就等於完成第一個部分，它的實作會請求分配一塊它需要的記憶體。這邊大概和其他程式語言都一樣。</p>
-<p>不過第二部分就不同了。在擁有<em>垃圾回收機制（garbage collector, GC）</em> 的語言中，GC 會追蹤並清理不再使用的記憶體，所以我們不用去擔心這件事。沒有 GC 的話，識別哪些記憶體不再使用並顯式呼叫程式碼釋放它們就是我們的責任了，就像我們請求取得它一樣。在以往的歷史我們可以看到要完成這件事是一項艱鉅的任務，如果我們忘了，那麼就等於在浪費記憶體。如果我們釋放的太早的話，我們則有可能會拿到無效的變數。要是我們釋放了兩次，那也會造成程式錯誤。我們必須準確無誤地配對一個 <code>allocate</code> 給剛好一個 <code>free</code>。</p>
+<p>不過第二部分就不同了。在擁有<em>垃圾回收機制</em>（<em>garbage collector, GC</em>）的語言中，GC 會追蹤並清理不再使用的記憶體，所以我們不用去擔心這件事。沒有 GC 的話，識別哪些記憶體不再使用並顯式呼叫程式碼釋放它們就是我們的責任了，就像我們請求取得它一樣。在以往的歷史我們可以看到要完成這件事是一項艱鉅的任務，如果我們忘了，那麼就等於在浪費記憶體。如果我們釋放的太早的話，我們則有可能會拿到無效的變數。要是我們釋放了兩次，那也會造成程式錯誤。我們必須準確無誤地配對一個 <code>allocate</code> 給剛好一個 <code>free</code>。</p>
 <p>Rust 選擇了一條不同的道路：當記憶體在擁有它的變數離開作用域時就會自動釋放。以下是我們解釋作用域的範例 4-1，但使用的是 <code>String</code> 而不是原本的字串字面值：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    {
@@ -257,7 +257,7 @@
 </span></code></pre></pre>
 <p>當 <code>s</code> 離開作用域時，我們就可以很自然地將 <code>String</code> 所需要的記憶體釋放回分配器。 當變數離開作用域時，Rust 會幫我們呼叫一個特殊函式。此函式叫做 <code>drop</code>，在這裡當時 <code>String</code> 的作者就可以寫入釋放記憶體的程式碼。Rust 會在大括號結束時自動呼叫 <code>drop</code>。</p>
 <blockquote>
-<p>注意：在 C++，這樣在項目生命週期結束時釋放資源的模式，有時被稱為<em>資源取得即初始化（Resource Acquisition Is Initialization, RAII）</em>。如果你已經用過 RAII 的模式，那麼你應該就會很熟悉 Rust 的 <code>drop</code> 函式。</p>
+<p>注意：在 C++，這樣在項目生命週期結束時釋放資源的模式，有時被稱為<em>資源取得即初始化</em>（<em>Resource Acquisition Is Initialization, RAII</em>）。如果你已經用過 RAII 的模式，那麼你應該就會很熟悉 Rust 的 <code>drop</code> 函式。</p>
 </blockquote>
 <p>這樣的模式對於 Rust 程式碼的編寫有很深遠的影響。雖然現在這樣看起來很簡單，但在更多複雜的情況下程式碼的行為可能會變得很難預測。像是當我們需要許多變數，所以得在堆積上分配它們的情況。現在就讓我們開始來探討這些情形。</p>
 <h4><a class="header" href="#變數與資料互動的方式移動move" id="變數與資料互動的方式移動move">變數與資料互動的方式：移動（Move）</a></h4>
@@ -316,7 +316,7 @@ error: could not compile `ownership`.
 
 To learn more, run the command again with --verbose.
 </code></pre>
-<p>如果你在其他語言聽過<em>淺拷貝（shallow copy）</em> 和 <em>深拷貝（deep copy）</em> 這樣的詞，拷貝指標、長度和容量而沒有拷貝實際內容這樣的概念應該就相近於淺拷貝。但因為 Rust 同時又無效化第一個變數，我們不會叫此為淺拷貝，而是稱此動作為<em>移動（move）</em>。在此範例我們會稱 <code>s1</code> <em>被移動</em> 到 <code>s2</code>，所以實際上發生的事長得像圖示 4-4 這樣。</p>
+<p>如果你在其他語言聽過<em>淺拷貝</em>（<em>shallow copy</em>） 和 <em>深拷貝</em>（<em>deep copy</em>） 這樣的詞，拷貝指標、長度和容量而沒有拷貝實際內容這樣的概念應該就相近於淺拷貝。但因為 Rust 同時又無效化第一個變數，我們不會叫此為淺拷貝，而是稱此動作為<em>移動</em>（<em>move</em>）。在此範例我們會稱 <code>s1</code> <em>被移動</em> 到 <code>s2</code>，所以實際上發生的事長得像圖示 4-4 這樣。</p>
 <img alt="s1 moved to s2" src="img/trpl04-04.svg" class="center" style="width: 50%;" />
 <p><span class="caption">圖示 4-4：<code>s1</code> 無效後的記憶體結構</span></p>
 <p>這樣就解決了問題！只有 <code>s2</code> 有效的話，當它離開作用域，就只有它會釋放記憶體，我們就完成所有動作了。</p>
@@ -334,7 +334,7 @@ To learn more, run the command again with --verbose.
 <p>此程式碼能執行無誤，並明確作出了像圖示 4-3 這樣的行為，也就是堆積資料<em>的確</em>被複製了一份。</p>
 <p>當你看到 <code>clone</code> 的呼叫，你就會知道有一些特定的程式碼被執行且消費可能是相對昂貴的。你可以很清楚地知道有些不同的行為正在發生。</p>
 <h4><a class="header" href="#只在堆疊上的資料拷貝copy" id="只在堆疊上的資料拷貝copy">只在堆疊上的資料：拷貝（Copy）</a></h4>
-<p>還有一個小細節我們還沒提到，也就是我們在使用整數時的程式碼。回想一下範例 4-2 是這樣寫的，它能執行且有效：</p>
+<p>還有一個小細節我們還沒提到，也就是我們在使用整數時的程式碼。回想一下範例 4-2 是這樣寫的，它能執行而且是有效的：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    let x = 5;
     let y = x;
@@ -343,7 +343,7 @@ To learn more, run the command again with --verbose.
 <span class="boring">}
 </span></code></pre></pre>
 <p>但這段程式碼似乎和我們剛學的互相矛盾：我們沒有呼叫 <code>clone</code>，但 <code>x</code> 卻仍是有效的，沒有移動到 <code>y</code>。</p>
-<p>原因是因為像整數這樣的型別在編譯時是已知大小，所以只會存在在堆疊上。所以要拷貝一份實際數值的話是很快的。這也讓我們沒有任何理由要讓 <code>x</code> 在 <code>y</code> 建立後被無效化。換句話說，這邊沒有所謂淺拷貝與深拷貝的差別。所以這邊呼叫 <code>clone</code> 的會不會與平常的淺拷貝有啥不一樣，我們可以保持這樣就好。</p>
+<p>原因是因為像整數這樣的型別在編譯時是已知大小，所以只會存在在堆疊上。所以要拷貝一份實際數值的話是很快的。這也讓我們沒有任何理由要讓 <code>x</code> 在 <code>y</code> 建立後被無效化。換句話說，這邊沒有所謂淺拷貝與深拷貝的差別。所以這邊呼叫 <code>clone</code> 的話不會與平常的淺拷貝有啥不一樣，我們可以保持這樣就好。</p>
 <p>Rust 有個特別的標記叫做 <code>Copy</code> 特徵（trait）可以用在標記像整數這樣存在堆疊上的型別（我們會在第十章討論什麼是特徵）。如果一個型別有 <code>Copy</code> 特徵的話，舊的變數在賦值後仍然會是有效的。如果一個型別有實作（implement）<code>Drop</code> 特徵的話，Rust 不會允許我們讓此型別擁有 <code>Copy</code> 特徵。如果我們對某個型別在數值離開作用域時，需要在做特別處理的話，我們對此型別標註 <code>Copy</code> 特徵會在編譯時期產生錯誤。想要瞭解如何為你的型別加上 <code>Copy</code> 的話，請參考附錄 C <a href="appendix-03-derivable-traits.html">「可推導的特徵」</a><!-- ignore --> </p>
 <p>所以哪些型別有 <code>Copy</code> 呢？你可以閱讀技術文件來知道哪些型別有，但基本原則是任何簡單地純量數值都可以有 <code>Copy</code>，且不需要分配記憶體或任何形式資源的型別也是有 <code>Copy</code>。以下是一些擁有 <code>Copy</code> 的型別：</p>
 <ul>
